--- a/docker/ddns-frontend/Dockerfile
+++ b/docker/ddns-frontend/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.9.1-alpine3.13
 
-WORKDIR /code
-
 RUN apk add --no-cache git
 
-RUN git clone https://github.com/SeolHa314/ddns-python .
+RUN git clone https://github.com/SeolHa314/ddns-python
 RUN apk del git
+WORKDIR /ddns-python
 RUN pip install -r requirements.txt
 
-CMD uvicorn api.frontend.main:app
+WORKDIR /api/frontend
+CMD uvicorn main:app
